--- a/src/app/user-module/user-module.component.html
+++ b/src/app/user-module/user-module.component.html
@@ -11,14 +11,14 @@
          </mat-tab> 
          <mat-tab>
             <ng-template mat-tab-label>
-               <a class="nav-link" [routerLink] = "['/register']" style="text-decoration: none;color: white; font-size: large">
+               <a class="nav-link" [routerLink] = "['/book-room']" style="text-decoration: none;color: white; font-size: large">
                   Book Meeting Room
                </a>
             </ng-template>
          </mat-tab>
          <mat-tab>
             <ng-template mat-tab-label>
-               <a class="nav-link" [routerLink] = "['/userdetails']" style="text-decoration: none; color: white; font-size: large">
+               <a class="nav-link" [routerLink] = "['/register']" style="text-decoration: none; color: white; font-size: large">
                   View Details
                </a>
             </ng-template>
